# daimon

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRIVACY.md  README.md  SECURITY.md  alembic.ini  compose.notebook.yml  compose.worker.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
apps/notebook-host/: Dockerfile  README.md  fly.notebook.example.toml  pyproject.toml
apps/notebook-host/src/notebook_host/: __init__.py  __main__.py  admin.py  blogs_store.py  capability.py  config.py  lifecycle.py  main.py  pids_store.py  proxy.py
apps/notebook-host/tests/: conftest.py  test_admin.py  test_admin_upload.py  test_attach_data.py  test_blogs_admin.py  test_blogs_store.py  test_capability.py  test_lifecycle.py  test_main.py  test_pids_store.py  test_safe_attachment_name.py  test_validation.py
defaults/: README.md  config.yaml
defaults/agents/: daimon.yaml
defaults/agents-optional/: dev_agent.yaml
defaults/environments/: default.yaml
defaults/skills/cli-auth/: SKILL.md
defaults/skills/marimo_blog/: SKILL.md
defaults/skills/marimo_notebooks/: SKILL.md
docker/: entrypoint.sh
docs/: slack.md
scripts/: generate_env_example.py  generate_gcp_secrets.py  lint_anti_patterns.sh  lint_discord_modals.py
scripts/db/init/: 01-create-databases.sql
scripts/probes/: panel_sync_local.py  resume_turn_rendering.py
scripts/probes/github_app/: binding_resync_bridge.py  live_push_webhook.py  pat_private_repo_sync.py
scripts/probes/managed_agents/: agent_hard_delete.py  agent_skills_empty.py  archived_retrieve_shape.py  cli_shape_drift.py  concurrent_streams.py  credential_file_mount.py  deleted_retrieve_shape.py  deny_all_tools.py  dup_display_title.py  dup_vault_resolver_picks_oldest.py  environment_create_shape.py  environment_pip_pinning.py  events_endpoint_viability.py  files_api_egress.py  interrupt_behavior.py  list_endpoints.py  list_pagination.py  live_agent_curl_egress.py  mcp_events_direct_post.py  mcp_per_turn_caller_metadata.py  mcp_vault_concurrent_create.py  mcp_vault_count_ceiling.py  mcp_vault_credential_create.py  mcp_vault_credential_update.py  mcp_vault_injection.py  mcp_vault_model.py  mcp_vault_shape_sweep.py  name_uniqueness.py  probe_bug12_default_agent_merge.py  probe_bug12_skill_merge.py  probe_bug13_resolver_self_heal.py  session_gdpr_deletion.py  session_idle_timeout.py  sessions_search.py  shapes_and_lifecycle.py  skill_name_mismatch.py  skill_version_dedup.py  skills_content_download.py  skills_delete_cascade.py  skills_delete_with_agent_refs.py  (+11 more)
scripts/probes/mcp/: FINDINGS.md  _factory.py  fastmcp_asgi_transport.py  fastmcp_factory_uvicorn.py  fastmcp_middleware_state.py  healthz_auth_gate.py  healthz_route_append.py  jwt_roundtrip.py  jwtverifier_hs256.py
scripts/probes/slack/: channels_select_socket_mode_probe.py  external_select_socket_mode_spike.py  probe_user_token_reads.py  slack_connect_field_probe.py
scripts/probes/stripe/: cumulative_amount_refunded.py
tests/integration/: conftest.py  test_discord_turn_e2e.py  test_routines_end_to_end.py
typings/imageio_ffmpeg/: __init__.pyi
typings/pydub/: __init__.pyi  audio_segment.pyi
